--- a/videosgames.html
+++ b/videosgames.html
@@ -13,14 +13,17 @@
     <h2>Video Games at Home (1960-1983)</h2>
       <p> 1967, A prototype multiplayer game was invented that could be played on a television.Ataris 'Pong' was the first arcade video game. Atari would also be sued for over 100 million dollars by Sanders Associates.</p>
     <h2>The North American Video Game Crash (1983)</h2>
-      <p>In the time period of 1983, the gaming industry was barely a fraction of what it is now, making it considered as a niche genre, or a fad. Eventually, an event called the “North American Video Game Crash would occur, which almost spelled the end for video gaming entirely. One of the main reasons for the Crash was major oversaturation of the market. At the time, there were dozens of consoles to choose from and </p>
+      <p>In the time period of 1983, the gaming industry was barely a fraction of what it is now, making it considered as a niche genre, or a fad. Eventually, an event called the “North American Video Game Crash would occur, which almost spelled the end for video gaming entirely. One of the main reasons for the Crash was major oversaturation of the market. At the time, there were dozens of consoles to choose from and many of their own games made for them. Some of these consoles were 
+      <ul>
+        <li>The Atari 2600,</li>
+        <li>The Magnavox Odyssey,</li>
+        <li>And the ColecoVision.</li>
+      </ul>
+
+</p>
+
+  <video>https://www.youtube.com/watch?v=-3-2JTkVTyA</video>
+
     <h2>The  Rise of Games in the East (1985-1995)</h2>
-      <p>The top 3 games of this time were; Number 1.  –  Chrono Trigger Number 2.  –  Alien Soldier Number 3.  –  Donkey Kong Country 2:  Diddy’s Kong Quest are the top 3 games Fantasy role playing video games grew in popularity with the creation of famous game, Legends of Zelda. By 1989, Handheld gaming became more common with Nintendo’s release of the Gameboy, video games that you can bring with you and run on mostly battery.</p>
-    <h2>Tech Company Takeover (1995-2010)</h2>
-      <p></p>
-    <h2>Today in Gaming (2010-Now)</h2>
-      <p>Now, today, </p>
-    <h2>Useful Websites</h2>
-      <p></p>
-  </body>
-</html>
+      <p>The top 3 games of this time were; Number 1.  –  Chrono Trigger Number 2.  –  Alien Soldier Number 3.  –  Donkey Kong Country 2:  Diddy’s Kong Quest are the top 3 games Fantasy role playing video games grew in popularity with the creation of famous game, Legend
+
