--- a/halloween.html
+++ b/halloween.html
@@ -29,4 +29,6 @@ body {background-color: yellow; }
 	</p>
   </div>
 </body>
+	<img src="https://jamespburke.github.io/halloween/jack.png" alt="https://jamespburke.github.io/halloween/jack.png" class="shrinkToFit transparent" width="380" height="588">
+</body>
 </html>
